--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ a {
   color: #ffffff;
   background: linear-gradient(-135deg, #5a5a5a, #6f42c1);
   box-shadow: 0 4px 15px 0 rgba(245,245,245);
+  border: #000 1px solid;
 }
 
 @media screen and (max-width: 426px) {
