--- a/stylesss.css
+++ b/stylesss.css
@@ -167,6 +167,14 @@ form .button input:hover {
   background: linear-gradient(-135deg, #6f42c1, #696969);
 }
 
+.barrier {
+  width: 100%;
+  text-align: right;
+  margin-top: -20px;
+  padding-right: 10px;
+  color: #737373;
+}
+
 @media (max-width: 767px) {
     .container {
         margin-top: 100rem;
